# ffmppegui

./: .gitignore  @project_map.md  A_FAIRE.md  CORRECTIONS_FINALES.md  Cargo.toml  DISTRIBUTED_ENCODING_PLAN.md  INTERFACE_ADAPTATIVE_FIXED.md  README.md  REFACTORING_COMPLETED.md  fixplan.md  main.py  project_map.md  project_map_gui.md  project_map_server.md  queue.json  requirements.txt  rust_implementation_report_updated.md  scan.json  settings.json  test_codec_apply.py  test_features.py
c-agent/: Makefile  c-agent
core/: encode_job.py  ffmpeg_helpers.py  settings.py  worker_pool.py
distributed_ffmpeg_gui/: controller.py  install_mac.sh  integrated_server.py  launch_gui.command  main.py  requirements.txt  server_connector.py  servers.json
distributed_ffmpeg_server/: install_debian.sh  server.py
ffmpeg-easy-distributed/: report.md
gui/: advanced_filters_window.py  audio_tracks_window.py  batch_operations_window.py  job_edit_window.py  log_viewer_window.py  main_window.py  merge_videos_window.py  package-lock.json  package.json  settings_window.py  tsconfig.json
gui_py/: install.sh  main.py  requirements.txt  (+1 more)
rust-agent/: Cargo.toml  README.md
rust-agent/src/: config.rs  main.rs
rust-agent/src/controller/: connection.rs  mod.rs
rust-agent/src/ffmpeg/: executor.rs  mod.rs
rust-controller/: Cargo.toml  README.md
rust-controller/src/: config.rs  main.rs  state.rs
rust-controller/src/agents/: mod.rs
rust-controller/src/ffmpeg/: mod.rs
rust-controller/src/jobs/: mod.rs
rust-controller/src/server/: dispatch.rs  mod.rs  routes.rs  websocket.rs
(+69 files in other folders)
