[package]
name = "ffmpegeasy-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["stream"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
anyhow = "1.0"
sysinfo = "0.30"
num_cpus = "1.16"
which = "6.0"
hostname = "0.4"
urlencoding = "2.1"
